--- a/trunk/src/sharp/Resources/en_US.resX
+++ b/trunk/src/sharp/Resources/en_US.resX
@@ -117,6 +117,44 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HTML.Template" xml:space="preserve">
+    <value>&lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"&gt;&lt;html&gt;
+&lt;head&gt;
+	&lt;title&gt;Code example&lt;/title&gt;
+	&lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8" /&gt;
+&lt;/head&gt;
+&lt;style type="text/css"&gt;
+	.codeOL { color: #fafaf3;
+			background-color: #afaf9f;
+			padding: 0px 0px 0px 40px; margin: 0px; }
+	.c { font-family: monospace;
+		font-size: 12px;
+		padding-left: 5px;
+		color: #fafaf3; }
+	.cd { color: %ForegroundColor% }
+	.odd { background-color: %BackgroundOddColor% }
+	.even { background-color: %BackgroundEvenColor% }
+	.s00 { color: %JavaCommentColor% }
+	.s01 { color: %LineCommentColor% }
+	.s02 { color: %StringColor% }
+	.s03 { color: %NumberColor% }
+	.s04 { color: %RegexColor% }
+	.s05 { color: %XmlColor% }
+	.s06 { color: %KeyWordColor% }
+	.s07 { color: %BuiltInColor% }
+	.s08 { color: %JdockKeywordColor% }
+	.codeDiv { width: 550px; height: 800px; 
+		overflow: scroll; display:block; 
+		padding: 0px; margin: 0px; }
+	.insideCodeDiv { width: 300%; overflow: visible;
+		display:block; padding: 0px; margin: 0px; }
+&lt;/style&gt;
+&lt;body&gt;
+&lt;div class="codeDiv"&gt;&lt;div class="insideCodeDiv codeOL"&gt;
+%Code%
+&lt;/body&gt;
+&lt;/html&gt;</value>
+  </data>
   <data name="Info.Description" xml:space="preserve">
     <value>Exports AS3 code in HTML.</value>
   </data>
