--- a/trunk/sharp/NFXContext/Resources/en_US.resX
+++ b/trunk/sharp/NFXContext/Resources/en_US.resX
@@ -118,16 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Info.Description" xml:space="preserve">
-    <value>Creates resource project</value>
+    <value>Not Another Flex Project</value>
   </data>
   <data name="Label.FileMenuItem" xml:space="preserve">
-    <value>&amp;Resource Project</value>
+    <value>&amp;Not Another Flex Project</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="RSXPluginIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>RSX.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Title.PluginPanel" xml:space="preserve">
-    <value>Resource Project</value>
+    <value>Not Another Flex Project</value>
   </data>
 </root>
