--- a/trunk/sharp/SamHaXePanel/PluginUI.resx
+++ b/trunk/sharp/SamHaXePanel/PluginUI.resx
@@ -169,4 +169,15 @@
         s1c0gHPmbrPTpHNJKOCo2G1mZs20zcwUJ5yp1AB5+8/zEwgF5GMVDxh4AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="flashMovie.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA2QAAAAIB
+        AAAAAQAAAAAAAAAAAAAAAMQAAABnVWZVEAcAAAQ7AADuJQAACAACAAAAAAAIAAAAAAAIAAAAAAAIAA4A
+        AABXAGkAbgBkAG8AdwAAAAsA//8LAP//CAAKAAAASABpAGcAaAAAAAgAAgAAAAAACwD//wgAAAAAAAgA
+        AgAAAAAACAAQAAAAUwBoAG8AdwBBAGwAbAAAAAsAAAALAAAACAACAAAAAAAIAAAAAAAIAAIAAAAAAA0A
+        AAAAAAAAAAAAAAAAAAAAAAsAAQALAP//CAAAAAAAAwAWHSJ5Cw==
+</value>
+  </data>
 </root>
