--- a/sharp/SamHaXePanel/Resources/en_US.resX
+++ b/sharp/SamHaXePanel/Resources/en_US.resX
@@ -123,6 +123,10 @@
   <data name="Label.FileMenuItem" xml:space="preserve">
     <value>&amp;SamHaXe Panel</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="MP3Player" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>MP3Player.swf;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="SamIcon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -143,7 +147,6 @@
         YII=
 </value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="SamTemplate0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>SamHaXeResource.xml.fdt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
