--- a/sharp/SamHaXePanel/Resources/en_US.resX
+++ b/sharp/SamHaXePanel/Resources/en_US.resX
@@ -136,6 +136,9 @@
   <data name="MP3Player" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\AS3Mp3Player\bin\MP3Player.swf;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Resource.hx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resource.hx.fdt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="SamIcon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
